<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.16</version>
        <relativePath/>
    </parent>

    <groupId>com.workflow</groupId>
    <artifactId>workflow-server-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>workflow-server-parent</name>

    <modules>
        <module>workflow-core</module>
        <module>workflow-contracts</module>
        <module>workflow-admin</module>
        <module>workflow-storage</module>
        <module>workflow-db-migrator</module>
        <module>workflow-entity</module>
        <module>workflow-process</module>
        <module>biz-project</module>
        <module>workflow-open-api</module>
        <module>workflow-embed</module>
        <module>workflow-integration</module>
        <module>workflow-migration</module>
        <module>workflow-devtools</module>
        <module>workflow-app</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <flyway.version>11.20.3</flyway.version>
        <flowable.version>7.2.0</flowable.version>
        <jjwt.version>0.13.0</jjwt.version>
        <mybatis-plus.version>3.5.16</mybatis-plus.version>
        <lombok.version>1.18.30</lombok.version>
        <aws-sdk.version>2.47.6</aws-sdk.version>
        <bouncycastle.version>1.85</bouncycastle.version>
        <jackson-bom.version>2.21.5</jackson-bom.version>
        <netty.version>4.1.136.Final</netty.version>
        <tomcat.version>10.1.55</tomcat.version>
        <jsoup.version>1.22.2</jsoup.version>
        <json-schema-validator.version>2.0.1</json-schema-validator.version>
        <openapi-diff.version>2.1.7</openapi-diff.version>
        <swagger-parser.version>2.1.45</swagger-parser.version>
        <cloudevents.version>5.0.0</cloudevents.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-contracts</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-admin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-db-migrator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-entity</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-process</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>biz-project</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-open-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-embed</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-integration</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-outbox</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.workflow</groupId>
                <artifactId>workflow-migration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flowable</groupId>
                <artifactId>flowable-spring-boot-starter</artifactId>
                <version>${flowable.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>s3</artifactId>
                <version>${aws-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>apache5-client</artifactId>
                <version>${aws-sdk.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
